<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/my_card"
        android:layout_marginStart="@dimen/margin_side_card"
        android:layout_marginEnd="@dimen/margin_side_card"
        android:layout_marginTop="@dimen/margin_top_card"
        android:layout_marginBottom="@dimen/margin_top_card"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:src="@drawable/img_profile"
            android:layout_marginTop="@dimen/margin_photo"
            android:clipToOutline="true"
            android:background="@drawable/my_photo"
            android:layout_marginStart="@dimen/margin_side_photo"/>
        <LinearLayout
            android:layout_marginStart="@dimen/margin_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job"
                android:textStyle="bold"
                android:textColor="@color/Dark_gray"
                android:layout_marginStart="2dp"
                android:layout_marginTop="@dimen/margin_top_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_top_text">
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/location"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:layout_marginStart="@dimen/margin_location"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_top_text">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/review"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/review_rate"
                    android:layout_marginStart="@dimen/margin_review"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_star_24"
                    android:layout_marginStart="@dimen/margin_review"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:text="@string/number_of_hour"
                android:gravity="center"
                android:layout_gravity="end"
                android:textColor="@color/white"
                android:background="@drawable/my_text"
                android:layout_marginTop="@dimen/hour_margin"
                android:layout_marginEnd="@dimen/margin_side_photo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_name"
                android:layout_marginTop="@dimen/margin_top_text"
                android:textStyle="bold"
                android:textColor="@color/Dark_gray"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_side_photo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_text"
                android:layout_marginEnd="@dimen/margin_side_photo"
                android:text="@string/number_of_days"
                android:layout_gravity="end"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>



